# Auto

./: .gitignore  .test_autofile_1765771976918  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  SECURITY.md  TODO.md  USER-GUIDE.md  cmake-build.ps1  llvm.makefile  makefile  makefile.rust  script.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  main.yml  release.yml  test.yml
docs/: documentation.html  downloads.html  index.html  nav.js  repositories.html  robots.txt  sitemap.xml  wrangler.jsonc
include/: lib.h
installer-script/: Auto.iss
resources/: icon.rc  icon.rs  resource.res
rust/: Cargo.toml  main.rs
src/: lib.cpp  main.cpp
test/: README.md  test_lib.h  test_main.cpp
